--- a/js/.env.example
+++ b/js/.env.example
@@ -1,5 +1,5 @@
-BOT_TOKEN=coloque_seu_token_aqui
-BOT_OWNER_ID=seu_id_telegram
+BOT_TOKEN=7919310170:AAErAD1lHxsHBpXenIxFPEV6kCXZUf6FlJE
+BOT_OWNER_ID=7505129556
 AMAZON_API_KEY=opcional
 HOTMART_API_KEY=opcional
 SHOPEE_API_KEY=opcional
